--- a/src/main/resources/archetype-resources/__rootArtifactId__-app/res/values/strings.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-app/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="app_name">${parentArtifactId}</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="hit_text1">Press \'Hello world!\' button</string>
+    <string name="hit_text2">Button is pressed</string>
 
 </resources>
